--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -1,68 +1,65 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Social Network{% endblock %}</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="{% static 'network/styles.css' %}" rel="stylesheet" />
-    {%block script %}
-    {% endblock script %}
-    
-  </head>
-  <body>
-    <nav class="navbar is-link" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="{% url 'index' %}">
-          <img
-            src="https://img.icons8.com/color/480/000000/python--v1.png"
-            alt="Logo"
-            width="28"
-            height="28"
-          />
-        </a>
-      </div>
-
-      <div class="navbar-menu">
-        <div class="navbar-start">
-          {% if user.is_authenticated %}
-          <a class="navbar-item" href="{% url 'profile' user %}">
-            <strong>{{ user.username }}</strong>
-          </a>
-          {% endif %}
-          <a class="navbar-item" href="{% url 'index' %}">All Posts</a>
-          {% if user.is_authenticated %}
-          <a class="navbar-item" href="{% url 'following' %}">Following</a>
-          </div>
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <div class="buttons">
-                <a class="button is-dark" href="{% url 'logout' %}">
-                  <strong>Log Out</strong>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>
+            {% block title %}Social Network{% endblock %}
+        </title>
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="{% static 'network/styles.css' %}" rel="stylesheet" />
+        {% block script %}
+        {% endblock script %}
+    </head>
+    <body>
+        <nav class="navbar is-link" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="{% url 'index' %}">
+                    <img src="https://img.icons8.com/color/480/000000/python--v1.png"
+                         alt="Logo"
+                         width="28"
+                         height="28"/>
                 </a>
-              </div>
             </div>
-          </div>
-          {% else %}
-          </div>
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <div class="buttons">
-                <a class="button is-light" href="{% url 'login' %}">Log In</a>
-                <a class="button is-info" href="{% url 'register' %}"
-                  ><strong>Sign up</strong></a
-                >
-              </div>
+            <div class="navbar-menu">
+                <div class="navbar-start">
+                    {% if user.is_authenticated %}
+                        <a class="navbar-item" href="{% url 'profile' user %}">
+                            <strong>{{ user.username }}</strong>
+                        </a>
+                    {% endif %}
+                    <a class="navbar-item" href="{% url 'index' %}">All Posts</a>
+                    {% if user.is_authenticated %}
+                        <a class="navbar-item" href="{% url 'following' %}">Following</a>
+                    </div>
+                    <div class="navbar-end">
+                        <div class="navbar-item">
+                            <div class="buttons">
+                                <a class="button is-dark" href="{% url 'logout' %}">
+                                    <strong>Log Out</strong>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                {% else %}
+                </div>
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <div class="buttons">
+                            <a class="button is-light" href="{% url 'login' %}">Log In</a>
+                        <a class="button is-info" href="{% url 'register' %}"><strong>Sign up</strong></a
+                        >
+                    </div>
+                </div>
             </div>
-          </div>
-          {% endif %}
-      </div>
-    </nav>
-    <script type=text/javascript>
+        {% endif %}
+    </div>
+</nav>
+<script type=text/javascript>
       var like_url = "{% url 'like' %}";
       var edit_url = "{% url 'edit_post' %}";
-    </script>
-
-    {% block body %} {% endblock %}
-  </body>
+</script>
+{% block body %}{% endblock %}
+</body>
 </html>
