--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -1,75 +1,53 @@
-{% extends "network/layout.html" %} {% block body %}
-
-<main class="container">
-  <h2 class="title">Register</h2>
-
-  {% if message %}
-  <div class="title has-text-danger is-5">{{ message }}</div>
-  {% endif %}
-
-  <form action="{% url 'register' %}" method="post">
-    {% csrf_token %}
-    <div class="field">
-      <label class="label">Name</label>
-      <div class="control has-icons-left">
-        <input
-          class="input"
-          type="text"
-          name="username"
-          placeholder="Username"
-        />
-        <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Email</label>
-      <div class="control has-icons-left">
-        <input
-          class="input"
-          type="email"
-          name="email"
-          placeholder="Email Address"
-        />
-        <span class="icon is-small is-left">
-          <i class="fa fa-envelope"></i>
-        </span>
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Password</label>
-      <div class="control has-icons-left">
-        <input
-          class="input"
-          type="password"
-          name="password"
-          placeholder="Password"
-        />
-        <span class="icon is-small is-left">
-          <i class="fa fa-eye-slash"></i>
-        </span>
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Confirmation</label>
-      <div class="control has-icons-left">
-        <input
-          type="password"
-          name="confirmation"
-          class="input"
-          placeholder="Confirm Password"
-        />
-        <span class="icon is-small is-left">
-          <i class="fa fa-eye-slash"></i>
-        </span>
-      </div>
-    </div>
-    <div class="buttons">
-      <input class="button is-link" type="submit" value="Register" />
-    </div>
-  </form>
-  <p class="has-text-centered">
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
-  </p>
-</main>
-
+{% extends "network/layout.html" %}
+{% block body %}
+    <main class="container">
+        <h2 class="title">Register</h2>
+        {% if message %}<div class="title has-text-danger is-5">{{ message }}</div>{% endif %}
+        <form action="{% url 'register' %}" method="post">
+            {% csrf_token %}
+            <div class="field">
+                <label class="label">Name</label>
+                <div class="control has-icons-left">
+                    <input class="input" type="text" name="username" placeholder="Username" />
+                    <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
+                </div>
+            </div>
+            <div class="field">
+                <label class="label">Email</label>
+                <div class="control has-icons-left">
+                    <input class="input" type="email" name="email" placeholder="Email Address" />
+                    <span class="icon is-small is-left">
+                        <i class="fa fa-envelope"></i>
+                    </span>
+                </div>
+            </div>
+            <div class="field">
+                <label class="label">Password</label>
+                <div class="control has-icons-left">
+                    <input class="input" type="password" name="password" placeholder="Password" />
+                    <span class="icon is-small is-left">
+                        <i class="fa fa-eye-slash"></i>
+                    </span>
+                </div>
+            </div>
+            <div class="field">
+                <label class="label">Confirmation</label>
+                <div class="control has-icons-left">
+                    <input type="password"
+                           name="confirmation"
+                           class="input"
+                           placeholder="Confirm Password"/>
+                    <span class="icon is-small is-left">
+                        <i class="fa fa-eye-slash"></i>
+                    </span>
+                </div>
+            </div>
+            <div class="buttons">
+                <input class="button is-link" type="submit" value="Register" />
+            </div>
+        </form>
+        <p class="has-text-centered">
+            Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+        </p>
+    </main>
 {% endblock %}
