--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -6,23 +6,33 @@
         <title>
             {% block title %}Social Network{% endblock %}
         </title>
+        <link rel="shortcut icon" type="image/png" href="{% static 'network/favicon.png' %}"/>
         <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="{% static 'network/styles.css' %}" rel="stylesheet" />
+        <script src="{% static 'network/nav.js' %}"></script>
         {% block script %}
         {% endblock script %}
     </head>
     <body>
-        <nav class="navbar is-link" role="navigation" aria-label="main navigation">
+        <nav class="navbar is-link"
+             id="nav"
+             role="navigation"
+             aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="{% url 'index' %}">
-                    <img src="https://img.icons8.com/color/480/000000/python--v1.png"
+                    <img src="{% static 'network/favicon.png' %}"
                          alt="Logo"
                          width="28"
                          height="28"/>
                 </a>
+                <a role="button" class="navbar-burger" data-target="menu" aria-label="menu" aria-expanded="false">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
             </div>
-            <div class="navbar-menu">
+            <div class="navbar-menu" id="menu">
                 <div class="navbar-start">
                     {% if user.is_authenticated %}
                         <a class="navbar-item" href="{% url 'profile' user %}">
@@ -32,34 +42,29 @@
                     <a class="navbar-item" href="{% url 'index' %}">All Posts</a>
                     {% if user.is_authenticated %}
                         <a class="navbar-item" href="{% url 'following' %}">Following</a>
-                    </div>
-                    <div class="navbar-end">
-                        <div class="navbar-item">
-                            <div class="buttons">
-                                <a class="button is-dark" href="{% url 'logout' %}">
-                                    <strong>Log Out</strong>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                {% else %}
+                    {% endif %}
                 </div>
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button is-light" href="{% url 'login' %}">Log In</a>
-                        <a class="button is-info" href="{% url 'register' %}"><strong>Sign up</strong></a
-                        >
+                            {% if user.is_authenticated %}
+                                <a class="button is-dark" href="{% url 'logout' %}">
+                                    <strong>Log Out</strong>
+                                </a>
+                            {% else %}
+                                <a class="button is-light" href="{% url 'login' %}">Log In</a>
+                            <a class="button is-info" href="{% url 'register' %}"><strong>Sign up</strong></a
+                            >
+                        {% endif %}
                     </div>
                 </div>
             </div>
-        {% endif %}
-    </div>
-</nav>
-<script type=text/javascript>
-      var like_url = "{% url 'like' %}";
-      var edit_url = "{% url 'edit_post' %}";
-</script>
-{% block body %}{% endblock %}
+        </div>
+    </nav>
+    <script type=text/javascript>
+        var like_url = "{% url 'like' %}";
+        var edit_url = "{% url 'edit_post' %}";
+    </script>
+    {% block body %}{% endblock %}
 </body>
 </html>
