--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -57,7 +57,7 @@
             {% endif %}
         </section>
     {% empty %}
-        <h2 class="subtitle">No Posts :(</h2>
+        <h2 class="subtitle mt-6">No Posts :(</h2>
     {% endfor %}
     <nav class="pagination is-rounded is-centered"
          role="navigation"
