--- a/network/templates/network/user.html
+++ b/network/templates/network/user.html
@@ -88,7 +88,7 @@
             {% endif %}
         </section>
     {% empty %}
-        <h2 class="subtitle">No Posts :(</h2>
+        <h2 class="subtitle mt-6">No Posts :(</h2>
     {% endfor %}
 </div>
 <nav class="pagination is-rounded is-centered mb-6"
